--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,5 +1,60 @@
-.TextIF {
-  background: black;
+@import '~antd/dist/antd.css';
+[type=radio] {
+  display: none;
+}
+
+/* IMAGE STYLES */
+input[type=radio] + label {
+  background: asset-url("../svg/cross.svg") no-repeat left;
+  padding-left: 2rem;
+}
+
+/* CHECKED STYLES */
+input[type=radio]:checked + label {
+  background: asset-url("../svg/cross.svg") no-repeat left;
+}
+
+body, html, #root, .App {
+  height: 100%;
+  width: 100%;
+  background: url("../images/background.jpg");
+  background-size: 100%;
+}
+
+h1 {
+  color: #F2F2F2;
+  font-size: 18px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+p {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  margin: 0;
+  font-family: "Roboto", "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.background_g1, .background_g2 {
+  z-index: 1;
+  opacity: 5%;
+  position: fixed;
+  top: calc(50% - 300px);
+  left: calc(50% - 350px);
+}
+
+.background_g2 {
+  top: calc(50% - 115px);
+  left: calc(50% - 250px);
 }
 
 .circle-background {
@@ -20,4 +75,203 @@
   fill: red;
 }
 
-/*# sourceMappingURL=style.css.map */
+.textIF p {
+  color: #F2F2F2;
+  font-size: 16px;
+  font-weight: bold;
+}
+.textIF input {
+  color: #FFFFFF;
+  background: #11161B;
+  border: #83E4E4 1px solid;
+  border-radius: 3px;
+  font-size: 12px;
+  width: 366px;
+}
+
+.inputS p {
+  color: #83E4E4;
+  font-size: 16px;
+  position: absolute;
+}
+.inputS input {
+  border: none;
+  height: 28px;
+  mask-image: url("../svg/border.svg");
+  cursor: pointer;
+}
+
+.buttonS {
+  cursor: pointer;
+}
+
+.registration__error, .signIn__error {
+  color: #EB5757;
+  font-size: 12px;
+}
+
+.registration {
+  position: relative;
+  z-index: 100;
+  padding-top: 84px;
+  width: 100%;
+  height: 100%;
+}
+.registration form {
+  width: 370px;
+  margin: 0 auto;
+}
+.registration .registration__signIn {
+  width: 366px;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 20px;
+}
+.registration .registration__signIn .registration__button {
+  background: none;
+  color: #F2F2F2;
+  border: none;
+}
+.registration .registration_tittle {
+  font-weight: bold !important;
+  font-size: 16px !important;
+  color: #F2F2F2 !important;
+}
+.registration .registration__login, .registration .registration__password, .registration .registration__confirm-password {
+  margin-bottom: 12px;
+}
+.registration .registration__date {
+  margin-bottom: 12px;
+}
+.registration .registration__date p {
+  font-size: 16px;
+  color: #F2F2F2;
+}
+.registration .registration__date .ant-select {
+  width: 78px;
+}
+.registration .registration__date .registration__dateSelector {
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-gap: 30px;
+}
+.registration .registration__date .ant-select-selector {
+  height: 17px;
+  background: #11161B;
+  border: #83E4E4 1px solid;
+  border-radius: 3px;
+  font-size: 12px;
+  color: #F2F2F2;
+  text-align: center;
+}
+.registration .registration__date .ant-select-selection-search {
+  left: 0px;
+  width: 95px;
+}
+.registration .registration__date .ant-select-selection-item {
+  margin: 0 auto;
+  line-height: 17px;
+  padding: 0;
+}
+.registration .registration__date .ant-select-arrow {
+  right: -17px;
+  color: #FFFFFF;
+  font-size: 12px;
+  margin-top: -7px;
+  width: 15px;
+  height: 14px;
+}
+.registration .registration__sex {
+  cursor: pointer;
+  margin-bottom: 12px;
+}
+.registration .registration__sex p {
+  color: #F2F2F2;
+  font-size: 12px;
+}
+.registration .registration__sex .registration__radioB {
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-gap: 30px;
+}
+.registration .registration__sex .registration__radioB .radioB {
+  display: flex;
+  flex-direction: columns;
+}
+.registration .registration__sex .registration__radioB p {
+  display: inline;
+  margin-right: 7px;
+}
+.registration .registration__sex .registration__radioB img {
+  width: 18px;
+  height: 18px;
+  margin-left: 1px;
+  margin-bottom: 4px;
+  transform: rotate(45deg);
+}
+.registration .registration__sex .registration__radioB .registration__outline {
+  border-radius: 2px;
+  border: 1px solid #83E4E4;
+  margin-top: -2px;
+  width: 22px;
+  height: 22px;
+}
+.registration .registration__inputS {
+  width: 210px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+.registration .registration__inputS p {
+  text-align: center;
+  width: 210px;
+}
+.registration .registration__inputS input {
+  background-size: 210px 28px;
+  color: #F2F2F2;
+  width: 210px;
+}
+.registration .registration__exist {
+  color: #F2F2F2;
+  font-size: 12px;
+}
+
+.signIn {
+  position: relative;
+  z-index: 100;
+  padding-top: 84px;
+  width: 100%;
+  height: 100%;
+}
+.signIn form {
+  width: 370px;
+  margin: 0 auto;
+}
+.signIn .signIn__login, .signIn .signIn__password {
+  margin-bottom: 12px;
+}
+.signIn .signIn__inputS {
+  width: 210px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+.signIn .signIn__inputS p {
+  text-align: center;
+  width: 210px;
+}
+.signIn .signIn__inputS input {
+  background-size: 210px 28px;
+  color: #F2F2F2;
+  width: 210px;
+}
+.signIn .signIn_button {
+  width: 123px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 20px;
+  background: none;
+  color: #F2F2F2;
+  font-size: 12px;
+  border: none;
+}
