design news atempt1

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,19 +1,19 @@
 @import '~antd/dist/antd.css';
-[type=radio] {
-  display: none;
+@import './cyberdyne.css';
+@keyframes comeIn {
+  0% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  75% {
+    transform: scale(1.03);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
-
-/* IMAGE STYLES */
-input[type=radio] + label {
-  background: asset-url("../svg/cross.svg") no-repeat left;
-  padding-left: 2rem;
-}
-
-/* CHECKED STYLES */
-input[type=radio]:checked + label {
-  background: asset-url("../svg/cross.svg") no-repeat left;
-}
-
 body, html, #root, .App {
   height: 100%;
   width: 100%;
@@ -31,6 +31,11 @@ h1 {
 p {
   padding: 0;
   margin: 0;
+  word-wrap: break-word;
+}
+
+div {
+  word-wrap: break-word;
 }
 
 body {
@@ -38,6 +43,8 @@ body {
   font-family: "Roboto", "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #F2F2F2;
+  font-size: 16px;
 }
 
 code {
@@ -75,12 +82,21 @@ code {
   fill: red;
 }
 
+.avatar2 {
+  width: 32px;
+  height: 32px;
+}
+.avatar2 img {
+  border-radius: 16px;
+}
+
 .textIF p {
   color: #F2F2F2;
   font-size: 16px;
   font-weight: bold;
 }
 .textIF input {
+  padding: 0 10px;
   color: #FFFFFF;
   background: #11161B;
   border: #83E4E4 1px solid;
@@ -105,11 +121,6 @@ code {
   cursor: pointer;
 }
 
-.registration__error, .signIn__error {
-  color: #EB5757;
-  font-size: 12px;
-}
-
 .registration {
   position: relative;
   z-index: 100;
@@ -129,6 +140,7 @@ code {
 }
 .registration .registration__signIn .registration__button {
   background: none;
+  font-size: 16px;
   color: #F2F2F2;
   border: none;
 }
@@ -206,7 +218,7 @@ code {
   width: 18px;
   height: 18px;
   margin-left: 1px;
-  margin-bottom: 4px;
+  margin-bottom: 8px;
   transform: rotate(45deg);
 }
 .registration .registration__sex .registration__radioB .registration__outline {
@@ -274,4 +286,213 @@ code {
   color: #F2F2F2;
   font-size: 12px;
   border: none;
+}
+
+.requestRecPas {
+  position: relative;
+  z-index: 100;
+  padding-top: 84px;
+  width: 100%;
+  height: 100%;
+}
+.requestRecPas form {
+  width: 370px;
+  margin: 0 auto;
+}
+.requestRecPas .requestRecPas__inputS {
+  width: 210px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+.requestRecPas .requestRecPas__inputS p {
+  text-align: center;
+  width: 210px;
+}
+.requestRecPas .requestRecPas__inputS input {
+  background-size: 210px 28px;
+  color: #F2F2F2;
+  width: 210px;
+}
+.requestRecPas .requestRecPas__text {
+  margin-top: 20px;
+  color: #F2F2F2;
+  font-size: 12px;
+}
+
+.recoveryPas {
+  position: relative;
+  z-index: 100;
+  padding-top: 84px;
+  width: 100%;
+  height: 100%;
+}
+.recoveryPas form {
+  width: 370px;
+  margin: 0 auto;
+}
+.recoveryPas .recoveryPas__password, .recoveryPas .recoveryPas__confirmPas {
+  margin-bottom: 12px;
+}
+.recoveryPas .recoveryPas__inputS {
+  width: 210px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+.recoveryPas .recoveryPas__inputS p {
+  text-align: center;
+  width: 210px;
+}
+.recoveryPas .recoveryPas__inputS input {
+  background-size: 210px 28px;
+  color: #F2F2F2;
+  width: 210px;
+}
+
+.news {
+  width: 582px;
+  margin: 0 auto;
+  margin-top: 50px;
+  z-index: 100;
+  position: relative;
+}
+.news .post {
+  width: 100%;
+  background: #11161B;
+  border: 1px solid #83E4E4;
+  border-radius: 15px;
+  margin-bottom: 5px;
+  margin-top: 35px;
+  padding: 15px 20px 8px 20px;
+}
+.news .post .news__post-header {
+  font-family: "cyberdyne";
+  border-bottom: 1px solid #F2F2F2;
+  display: grid;
+  grid-template-columns: 375px 165px;
+  padding-bottom: 5px;
+  margin-bottom: 15px;
+}
+.news .post .news__post-header .news__post-leftSide, .news .post .news__post-header .news__post-rightSide {
+  display: flex;
+  flex-direction: row;
+}
+.news .post .news__post-header .news__post-leftSide {
+  font-size: 18px;
+}
+.news .post .news__post-header .news__post-leftSide .avatar1 {
+  margin-right: 20px;
+}
+.news .post .news__post-header .news__post-rightSide {
+  padding-top: 7px;
+  font-size: 12px;
+}
+.news .post .news__post-header .news__post-rightSide .news__post-date {
+  margin-right: 30px;
+}
+.news .post .news__post-text {
+  font-family: "Roboto";
+  margin-bottom: 15px;
+}
+.news .post .news__post-photos {
+  width: 540px;
+  height: 100%;
+}
+.news .post .news__post-photos .picture {
+  max-width: 540px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+}
+.news .post .news__post-photos .picture img {
+  max-width: 540px;
+}
+.news .post .news__post-photos .pictures {
+  animation: comeIn ease 0.5s;
+  animation-iteration-count: 1;
+  transition: left 0.3s ease, top 0.3s ease;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.news .post .news__footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-top: 10px;
+}
+.news .post .news__footer .news__post-likes, .news .post .news__footer .news__post-dislikes, .news .post .news__footer .news__post-comments {
+  display: flex;
+  flex-direction: row;
+  margin-right: 20px;
+  font-size: 12px;
+}
+.news .post .news__footer .news__post-likes p, .news .post .news__footer .news__post-dislikes p, .news .post .news__footer .news__post-comments p {
+  padding-top: 5px;
+  padding-left: 5px;
+}
+.news .post .news__footer .news__post-comments {
+  margin-right: 0;
+}
+.news .comments {
+  background: #11161B;
+  border: 1px solid #83E4E4;
+  border-radius: 15px;
+  margin-bottom: 25px;
+}
+.news .comments .news__moreComments {
+  font-size: 12px;
+  margin: 15px 40px 15px 40px;
+}
+.news .comments .comment {
+  font-family: "Roboto";
+  border-bottom: 1px solid #83E4E4;
+  margin: 0 40px 15px 40px;
+}
+.news .comments .comment .news__comment-content {
+  display: grid;
+  grid-template-columns: 32px 440px;
+  grid-gap: 18px;
+}
+.news .comments .comment .news__comment-content .news__comment-rightSide .news__comment-nickName {
+  font-size: 18px;
+  color: #83E4E4;
+}
+.news .comments .comment .news__comment-content .news__comment-rightSide .news__comment-text {
+  font-size: 16px;
+}
+.news .comments .comment .news__comment-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+.news .comments .comment .news__comment-footer .news__comment-likes, .news .comments .comment .news__comment-footer .news__comment-dislikes {
+  display: flex;
+  flex-direction: row;
+  margin-right: 20px;
+  font-size: 12px;
+}
+.news .comments .comment .news__comment-footer .news__comment-likes p, .news .comments .comment .news__comment-footer .news__comment-dislikes p {
+  padding-top: 5px;
+  padding-left: 5px;
+}
+.news .comments .news__reply {
+  display: grid;
+  grid-template-columns: 32px 460px 26px;
+  grid-gap: 10px;
+  margin: 0 20px 15px 20px;
+}
+.news .comments .news__reply .avatar2 img {
+  width: 32px;
+  height: 32px;
+}
+.news .comments .news__reply .news__reply-input {
+  border: 1px solid #83E4E4;
+  border-radius: 5px;
+  min-height: 40px;
+  padding: 6px 10px 2px 10px;
 }
