--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -1,4 +1,6 @@
 @import '~antd/dist/antd.css';
+@import './cyberdyne.css';
+
 $color-blue: #83E4E4;
 $color-red: #EB5757;
 $color-yellow: #FFD074;
@@ -13,23 +15,10 @@ $size-mini: 12px;
 
 $width-big: 210px;
 
-[type=radio] {
-  // position: absolute;
-  // opacity: 0;
-  // width: 0;
-  // height: 0;
-  display: none;
-}
-
-/* IMAGE STYLES */
-input[type=radio] + label  {
-  background: asset-url('../svg/cross.svg') no-repeat left;
-    padding-left: 2rem;
-}
-
-/* CHECKED STYLES */
-input[type=radio]:checked + label {
-  background: asset-url('../svg/cross.svg') no-repeat left;
+@keyframes comeIn {
+    0% { transform: scale(.5); opacity: 0; }
+    75% { transform: scale(1.03); opacity: 1; }
+    100% { transform: scale(1); opacity: 1; }
 }
 
 // main
@@ -50,6 +39,11 @@ h1 {
 p {
   padding: 0;
   margin: 0;
+  word-wrap: break-word;
+}
+
+div {
+  word-wrap: break-word;
 }
 
 body {
@@ -60,6 +54,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: $color-gray;
+  font-size: $size-standart;
 }
 
 code {
@@ -80,7 +76,7 @@ code {
   left: calc(50% - 250px);
 }
 
-// circular progress bar _______________________________________________________
+//circular progress bar ________________________________________________________
 .circle-background {
 	fill: none;
 	stroke: #ddd;
@@ -99,7 +95,16 @@ code {
 	fill: red;
 }
 
-// text input field ____________________________________________________________
+//avatar2 ______________________________________________________________________
+.avatar2 {
+  width: 32px;
+  height: 32px;
+
+  img {
+    border-radius: 16px;
+  }
+}
+//text input field _____________________________________________________________
 .textIF {
   p {
     color: $color-gray;
@@ -108,6 +113,7 @@ code {
   }
 
   input {
+    padding: 0 10px;
     color: $color-white;
     background: $color-black;
     border: $color-blue 1px solid;
@@ -117,7 +123,7 @@ code {
   }
 }
 
-// input submit ________________________________________________________________
+//input submit _________________________________________________________________
 .inputS {
   p {
     color: $color-blue;
@@ -140,13 +146,9 @@ code {
   cursor: pointer;
 }
 
-// error _______________________________________________________________________
-.registration__error, .signIn__error{
-  color: $color-red;
-  font-size: $size-mini;
-}
+////////////////////////////REGISTRATION////////////////////////////////////////
 
-// registration ________________________________________________________________
+//registration _________________________________________________________________
 .registration {
   position: relative;
   z-index: 100;
@@ -167,6 +169,7 @@ code {
 
     .registration__button {
       background: none;
+      font-size: $size-standart;
       color: $color-gray;
       border: none;
     }
@@ -257,7 +260,7 @@ code {
         width: 18px;
         height: 18px;
         margin-left: 1px;
-        margin-bottom: 4px;
+        margin-bottom: 8px;
         transform: rotate(45deg);
       }
 
@@ -294,6 +297,8 @@ code {
     font-size: $size-mini;
   }
 }
+
+////////////////////////////SIGN IN/////////////////////////////////////////////
 
 //sign in ______________________________________________________________________
 .signIn {
@@ -338,5 +343,256 @@ code {
     color: $color-gray;
     font-size: $size-mini;
     border: none;
+  }
+}
+////////////////////////////REQUEST RECOVERY PASSWORD///////////////////////////
+
+//request recovery password ____________________________________________________
+.requestRecPas {
+   position: relative;
+   z-index: 100;
+   padding-top: 84px;
+   width: 100%;
+   height: 100%;
+
+   form {
+     width: 370px;
+     margin: 0 auto;
+   }
+
+   .requestRecPas__inputS {
+     width: $width-big;
+     display: block;
+     margin: 0 auto;
+     margin-top: 50px;
+
+     p {
+       text-align: center;
+       width: $width-big;
+     }
+
+     input {
+       background-size: $width-big 28px;
+       color: $color-gray;
+       width: $width-big;
+     }
+   }
+
+   .requestRecPas__text {
+     margin-top: 20px;
+     color: $color-gray;
+     font-size: $size-mini;
+   }
+ }
+////////////////////////////RECOVERY PASSWORD///////////////////////////////////
+
+//recovery passwod _____________________________________________________________
+.recoveryPas {
+  position: relative;
+  z-index: 100;
+  padding-top: 84px;
+  width: 100%;
+  height: 100%;
+
+  form {
+    width: 370px;
+    margin: 0 auto;
+  }
+
+  .recoveryPas__password, .recoveryPas__confirmPas {
+    margin-bottom: 12px;
+  }
+
+  .recoveryPas__inputS {
+    width: $width-big;
+    display: block;
+    margin: 0 auto;
+    margin-top: 50px;
+
+    p {
+      text-align: center;
+      width: $width-big;
+    }
+
+    input {
+      background-size: $width-big 28px;
+      color: $color-gray;
+      width: $width-big;
+    }
+  }
+}
+
+/////////////////////////////NEWS///////////////////////////////////////////////
+
+.news {
+  width: 582px;
+  margin: 0 auto;
+  margin-top: 50px;
+  z-index: 100;
+  position: relative;
+  .post {
+    width: 100%;
+    background: $color-black;
+    border: 1px solid $color-blue;
+    border-radius: 15px;
+    margin-bottom: 5px;
+    margin-top: 35px;
+    padding: 15px 20px 8px 20px;
+
+    .news__post-header {
+      font-family: 'cyberdyne';
+      border-bottom: 1px solid $color-gray;
+      display: grid;
+      grid-template-columns: 375px 165px;
+      padding-bottom: 5px;
+      margin-bottom: 15px;
+
+      .news__post-leftSide, .news__post-rightSide {
+        display: flex;
+        flex-direction: row;
+      }
+
+      .news__post-leftSide {
+        font-size: $size-big;
+        .avatar1 {
+          margin-right: 20px;
+        }
+      }
+
+      .news__post-rightSide {
+        padding-top: 7px;
+        font-size: $size-mini;
+        .news__post-date {
+          margin-right: 30px;
+        }
+      }
+    }
+
+    .news__post-text {
+      font-family: 'Roboto';
+      margin-bottom: 15px;
+    }
+
+    .news__post-photos {
+      width: 540px;
+      height: 100%;
+
+      .picture {
+        max-width: 540px;
+        margin-right: 5px;
+        margin-bottom: 5px;
+        img {
+          max-width: 540px;
+        }
+      }
+
+      .pictures {
+        animation: comeIn ease 0.5s;
+        animation-iteration-count: 1;
+        transition: left .3s ease, top .3s ease;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+
+    .news__footer {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      margin-top: 10px;
+      .news__post-likes, .news__post-dislikes, .news__post-comments {
+        display: flex;
+        flex-direction: row;
+        margin-right: 20px;
+        font-size: $size-mini;
+        p {
+          padding-top: 5px;
+          padding-left: 5px;
+        }
+      }
+
+      .news__post-comments {
+        margin-right: 0;
+      }
+    }
+  }
+
+  .comments {
+    background: $color-black;
+    border: 1px solid $color-blue;
+    // padding: 15px 40px 8px 40px;
+    border-radius: 15px;
+    margin-bottom: 25px;
+
+    .news__moreComments {
+      font-size: $size-mini;
+      // margin-bottom: 15px;
+      margin: 15px 40px 15px 40px;
+    }
+
+    .comment {
+      font-family: 'Roboto';
+      border-bottom: 1px solid $color-blue;
+      // margin-bottom: 15px;
+      margin: 0 40px 15px 40px;
+      .news__comment-content {
+        display: grid;
+        grid-template-columns: 32px 440px;
+        grid-gap: 18px;
+
+        .news__comment-rightSide {
+          .news__comment-nickName {
+            font-size: $size-big;
+            color: $color-blue;
+          }
+
+          .news__comment-text {
+            font-size: $size-standart;
+          }
+        }
+      }
+
+      .news__comment-footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        margin-top: 10px;
+        margin-bottom: 15px;
+        .news__comment-likes, .news__comment-dislikes {
+          display: flex;
+          flex-direction: row;
+          margin-right: 20px;
+          font-size: $size-mini;
+          p {
+            padding-top: 5px;
+            padding-left: 5px;
+          }
+        }
+      }
+    }
+
+    .news__reply {
+      display: grid;
+      grid-template-columns: 32px 460px 26px;
+      grid-gap: 10px;
+      margin: 0 20px 15px 20px;
+
+      .avatar2 {
+        img {
+          width: 32px;
+          height: 32px;
+        }
+      }
+
+      .news__reply-input {
+        border: 1px solid $color-blue;
+        border-radius: 5px;
+        min-height: 40px;
+        padding: 6px 10px 2px 10px;
+      }
+    }
   }
 }
