--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -1,5 +1,6 @@
 @import '~antd/dist/antd.css';
 @import './cyberdyne.css';
+@import './robotoMono.css';
 
 $color-blue: #83E4E4;
 $color-red: #EB5757;
@@ -49,7 +50,7 @@ div {
 body {
   // -apple-system, BlinkMacSystemFont,
   margin: 0;
-  font-family: 'Roboto', 'Segoe UI', 'Oxygen',
+  font-family: 'Roboto Mono', 'Roboto', 'Segoe UI', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -134,11 +135,73 @@ code {
   input{
     border: none;
     height: 28px;
-    // -webkit-mask-image: url('../svg/border.svg');
+    -webkit-mask-image: url('../svg/border.svg');
     mask-image: url('../svg/border.svg');
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-position: center center;
+    mask-position: center center;
     cursor: pointer;
 
   }
+}
+
+.avatar1 {
+  cursor: pointer;
+
+  .outline {
+    position: absolute;
+    display: flex;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    -webkit-mask-size: 128px;
+    width: 133px;
+    height: 130px;
+    // mask-size:
+    -webkit-mask-image: url('../svg/outline.svg');
+    mask-image: url('../svg/outline.svg');
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    mask-position: center center;
+  }
+
+  .avatar {
+    height: 70px;
+    width: 70px;
+    margin: 0 auto;
+    align-self: center;
+
+    .shield {
+      position: absolute;
+      background: rgb(241,239,239);
+      background: linear-gradient(180deg, rgba(241,239,239,1) 0%, rgba(203,250,252,1) 100%);
+
+      // background: rgb(2,0,36);
+      // background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+      width: 70px;
+      height: 83px;
+      -webkit-mask-image: url('../svg/shieldOutline.svg');
+      mask-image: url('../svg/shieldOutline.svg');
+      -webkit-mask-repeat: no-repeat;
+      mask-repeat: no-repeat;
+      mask-position: center center;
+    }
+
+    .photo {
+      position: absolute;
+      width: 70px;
+      height: 83px;
+      display: block;
+      -webkit-mask-image: url('../svg/shield.svg');
+      mask-image: url('../svg/shield.svg');
+      -webkit-mask-position: center center;
+      mask-position: center center;
+      -webkit-mask-repeat: no-repeat;
+      mask-repeat: no-repeat;
+    }
+  }
+
+
 }
 
 //button submit ________________________________________________________________
@@ -345,6 +408,7 @@ code {
     border: none;
   }
 }
+
 ////////////////////////////REQUEST RECOVERY PASSWORD///////////////////////////
 
 //request recovery password ____________________________________________________
@@ -384,6 +448,7 @@ code {
      font-size: $size-mini;
    }
  }
+
 ////////////////////////////RECOVERY PASSWORD///////////////////////////////////
 
 //recovery passwod _____________________________________________________________
@@ -424,6 +489,7 @@ code {
 
 /////////////////////////////NEWS///////////////////////////////////////////////
 
+//news _________________________________________________________________________
 .news {
   width: 582px;
   margin: 0 auto;
@@ -437,14 +503,14 @@ code {
     border-radius: 15px;
     margin-bottom: 5px;
     margin-top: 35px;
-    padding: 15px 20px 8px 20px;
+    padding: 10px 20px 8px 20px;
 
     .news__post-header {
       font-family: 'cyberdyne';
       border-bottom: 1px solid $color-gray;
       display: grid;
       grid-template-columns: 375px 165px;
-      padding-bottom: 5px;
+      padding-bottom: 7px;
       margin-bottom: 15px;
 
       .news__post-leftSide, .news__post-rightSide {
@@ -454,48 +520,92 @@ code {
 
       .news__post-leftSide {
         font-size: $size-big;
+        display: flex;
+
+        .news__post-author {
+          align-self: center;
+        }
+
         .avatar1 {
           margin-right: 20px;
+          width: 41px;
+          height: 48px;
+
+          .outline {
+            width: 41px;
+            height: 48px;
+            background: none;
+          }
+
+          .avatar {
+            align-self: auto;
+            width: 41px;
+            height: 48px;
+
+            .photo {
+              width: 41px;
+              height: 48px;
+              -webkit-mask-size: 40px;
+              mask-size: 40px;
+            }
+
+            .shield {
+              width: 41px;
+              height: 48px;
+              -webkit-mask-size: 40px;
+              mask-size: 40px;
+            }
+          }
         }
       }
 
       .news__post-rightSide {
-        padding-top: 7px;
+        display: flex;
         font-size: $size-mini;
+
         .news__post-date {
+          align-self: center;
           margin-right: 30px;
         }
+
+        .news__post-time {
+          align-self: center;
+        }
       }
     }
 
-    .news__post-text {
-      font-family: 'Roboto';
-      margin-bottom: 15px;
-    }
+    .news__post-content {
+      .news__post-text {
+        // font-family: 'Roboto Mono';
+        margin-bottom: 15px;
+        line-height: 120%;
+      }
 
-    .news__post-photos {
-      width: 540px;
-      height: 100%;
+      .news__post-photos {
+        width: 540px;
+        height: 100%;
 
-      .picture {
-        max-width: 540px;
-        margin-right: 5px;
-        margin-bottom: 5px;
-        img {
+        .picture {
           max-width: 540px;
+          margin-right: 5px;
+          margin-bottom: 5px;
+          img {
+            max-width: 540px;
+          }
+        }
+
+        .pictures {
+          animation: comeIn ease 0.5s;
+          animation-iteration-count: 1;
+          transition: left .3s ease, top .3s ease;
+          width: 100%;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          align-items: center;
         }
       }
 
-      .pictures {
-        animation: comeIn ease 0.5s;
-        animation-iteration-count: 1;
-        transition: left .3s ease, top .3s ease;
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-      }
     }
 
     .news__footer {
@@ -595,4 +705,43 @@ code {
       }
     }
   }
+
 }
+
+.news__portal {
+  background: #181e26bf;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 200;
+  top: 0;
+  display: flex;
+
+  .news__portal-wrap {
+    width: calc(70vw + 120px);
+    min-width: 720px;
+    max-width: 920px;
+    margin: 0 auto;
+    align-self: center;
+  }
+
+  .news__portal-picture {
+    width: 70vw;
+    min-width: 600px;
+    max-width: 800px;
+  }
+
+  .news__portal-prevPicture {
+    height: 40px;
+    width: 40px;
+    margin-right: 20px;
+  }
+
+  .news__portal-nextPicture {
+    height: 40px;
+    width: 40px;
+    margin-left: 20px;
+  }
+}
+
+////////////////////////////////////////////////////////////////////////////////
